main/Home/CSS/index.css
/* ... */
::placeholder {
    color:#fff;
}
#footer {
    color: #fff;
    width: 92vw;
    padding: 5vh 4vw;
    text-align: left; /* Change text alignment to left */
    position: fixed;
    z-index: 1;
    bottom: 0;
    font-size: 16px;
    font-weight: bold;
}
#footer a {
    color: rgb(255, 50, 50);
}
#particles-js {
    position:fixed;
    width:100vw;
    height:100vh;
}
::-webkit-scrollbar {
    width:5px;
    height:5px;
}
::-webkit-scrollbar-track {
    background: #fff; 
}
::-webkit-scrollbar-thumb {
    background: rgb(118, 19, 19); 
}
::-webkit-scrollbar-thumb:hover {
    background: rgba(118, 19, 19, 0.8); 
}
::selection {
	color: #fff;
	background: rgb(118, 19, 19); 
}

.heading-with-icon {
    display: flex;
    align-items: center;
  }
  
  .heading-with-icon .icon {
    margin-right: 8px; /* Adjust the spacing between the icon and the text */
    vertical-align: middle;
  }

@media (max-width: 800px){ 
    #about {
        display:none;
    }
    #contact {
        display:none;
    }
    #work {
        display:none;
    }
    #blogs {
        display:none;
    }
    #footer {
        text-align:center;
    }
    #middle {
        width:90vw;
        padding:0px 5vw;
    }
    #middle table {
        width:80%;
    }
    .container form input {
        width:90%;
    }
    .container form textarea {
        width:90%;
    }
    #menu {
        display:inline-block;
    }
    #onlywide {
        display:none !important;
    }
    .box2 {
        margin-left:0px !important;
    }
    #box div {
        width:100%;
    }
    .md-centering {
        text-align: center;
    }
    .md-hide {
        display: none !important;
    }
}

